@@ -66,7 +66,7 @@ IF( BUILD_PACKAGE )
 ENDIF( BUILD_PACKAGE )
 
 set(CPACK_PACKAGE_VERSION_MAJOR 4)
-set(CPACK_PACKAGE_VERSION_MINOR 2)
+set(CPACK_PACKAGE_VERSION_MINOR 3)
 set(CPACK_PACKAGE_VERSION_PATCH a)
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "Radiance")
 SET(CPACK_RESOURCE_FILE_WELCOME "${radiance_SOURCE_DIR}/Welcome.txt")
