@@ -21,6 +21,9 @@ extern "C" {
 #define ANG2R(r)	(int)((r)*((1<<16)/M_PI))
 #define R2ANG(c)	(((c)+.5)*(M_PI/(1<<16)))
 
+					/* moderated cosine factor */
+#define COSF(z)		(fabs(z)*0.98 + 0.02)
+
 typedef union {
 	struct {
 		float		v;		/* DSF sum */
@@ -90,6 +93,8 @@ extern unsigned long	bsdf_hist[HISTLEN];
 
 				/* BSDF value for boundary regions */
 extern double		bsdf_min;
+extern double		bsdf_spec_peak;
+extern double		bsdf_spec_rad;
 
 				/* processed incident DSF measurements */
 extern RBFNODE		*dsf_list;
@@ -148,7 +153,7 @@ extern void		ovec_from_pos(FVECT vec, int xpos, int ypos);
 /* Compute grid position from normalized input/output vector */
 extern void		pos_from_vec(int pos[2], const FVECT vec);
 
-/* Evaluate RBF for DSF at the given normalized outgoing direction */
+/* Evaluate BSDF at the given normalized outgoing direction */
 extern double		eval_rbfrep(const RBFNODE *rp, const FVECT outvec);
 
 /* Insert a new directional scattering function in our global list */
@@ -192,6 +197,9 @@ extern void		build_mesh(void);
 
 /* Find edge(s) for interpolating the given vector, applying symmetry */
 extern int		get_interp(MIGRATION *miga[3], FVECT invec);
+
+/* Return single-lobe specular RBF for the given incident direction */
+extern RBFNODE *	def_rbf_spec(const FVECT invec);
 
 /* Advect and allocate new RBF along edge (internal call) */
 extern RBFNODE *	e_advect_rbf(const MIGRATION *mig,
