@@ -219,7 +219,7 @@ samp_hemi(				/* sample indirect hemisphere */
 			wt > (d = 0.8*intens(rcol)*r->rweight/(ambdiv*minweight)))
 		wt = d;			/* avoid ray termination */
 	n = sqrt(ambdiv * wt) + 0.5;
-	i = 1 + 5*(ambacc > FTINY);	/* minimum number of samples */
+	i = 1 + 8*(ambacc > FTINY);	/* minimum number of samples */
 	if (n < i)
 		n = i;
 					/* allocate sampling array */
@@ -695,7 +695,7 @@ doambient(				/* compute ambient component */
 		return(0);
 
 	if ((ra == NULL) & (pg == NULL) & (dg == NULL) ||
-			(hp->sampOK < 0) | (hp->ns < 4)) {
+			(hp->sampOK < 0) | (hp->ns < 9)) {
 		free(hp);		/* Hessian not requested/possible */
 		return(-1);		/* value-only return value */
 	}
